# tatajuba

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  _src_0721.txz  aclocal.m4  autogen.sh  configure  configure.ac  gmon.out  o.fa
_bwa_original/: README.md  bwtindex.c  example.c
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
bwa/: Makefile.am  Makefile.in  README.md  bwa.c  bwape.c  bwase.c  bwase.h  bwaseqio.c  bwt.h  bwtaln.c  bwtaln.h  bwtindex.c  wrapper_bwa.c  wrapper_bwa.h
bwa_old/: Makefile.am  Makefile.in  bwa.h  bwamem.h  bwase.c  bwtaln.c  wrapper_bwa.h
docs/: 20201123.ref_examples.txt  2103.bordetella_samples.csv  2103.campy_bordetella.ipynb  2103.campylobacter_samples.csv  210427.campy_bordetella.ipynb  README.md  snpEff_config.txz  tutorial.md
doxygen/: index.md  tatajuba.doxy
doxygen/html/: annotated.html  classes.html  context__histogram_8h.html  context__histogram_8h__dep__incl.map  context__histogram_8h__dep__incl.md5  context__histogram_8h__incl.map  context__histogram_8h__incl.md5  context__histogram_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  genome__set_8h.html  genome__set_8h__incl.map  genome__set_8h__incl.md5  genome__set_8h_source.html  graph_legend.html  index.html  kseq_8h_source.html  struct____bmc2__kstring__t.html  structarg__parameters.html  structcont__hist__ptr__t.html  structcont__hist__ptr__t__coll__graph.map  structcont__hist__ptr__t__coll__graph.md5  structcontext__histogram__struct.html  structg__tract__t.html  structg__tract__t__coll__graph.map  structg__tract__t__coll__graph.md5  structg__tract__vector__struct.html  structg__tract__vector__struct__coll__graph.map  structg__tract__vector__struct__coll__graph.md5  structgenome__set__struct.html  structgenome__set__struct__coll__graph.map  structgenome__set__struct__coll__graph.md5  structgenomic__context__list__struct.html  structgenomic__context__list__struct__coll__graph.map  structgenomic__context__list__struct__coll__graph.md5  structhopo__counter__struct.html  structhopo__counter__struct__coll__graph.map  structhopo__counter__struct__coll__graph.md5  (+2 more)
doxygen/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  classes_2.js  classes_3.js  classes_5.js  files_0.js  files_1.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_6.js  variables_7.js
doxygen/latex/: annotated.tex  context__histogram_8h.tex  context__histogram_8h__dep__incl.md5  context__histogram_8h__incl.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  genome__set_8h.tex  genome__set_8h__incl.md5  index.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  struct____bmc2__kstring__t.tex  structarg__parameters.tex  structcont__hist__ptr__t.tex  structcont__hist__ptr__t__coll__graph.md5  structcontext__histogram__struct.tex  structg__tract__t.tex  structg__tract__t__coll__graph.md5  structg__tract__vector__struct.tex  structg__tract__vector__struct__coll__graph.md5  structgenome__set__struct.tex  structgenome__set__struct__coll__graph.md5  structgenomic__context__list__struct.tex  structgenomic__context__list__struct__coll__graph.md5  structhopo__counter__struct.tex  structhopo__counter__struct__coll__graph.md5  structhopo__element.tex  structtatajuba__options__t.tex
kalign/: Makefile.am  Makefile.in  Makefile_am_original  README.md  alignment.c  alignment.h  alignment_parameters.c  alignment_parameters.h  bisectingKmeans.c  bisectingKmeans.h  bpm.c  bpm.h  config.h.in  global.h  kalign.h  rng.c  rng.h  run_kalign.c  sequence_distance.c  sequence_distance.h  tldevel.c  tldevel.h
recipe/: meta.yaml  tatajuba.def
src/: .context_histogram.c.swp  .context_histogram.h.swp  202009.compress_io_xz.c  Makefile.am  Makefile.am.bkp  Makefile.in  __unused.c  analyse_variable_tracts.c  analyse_variable_tracts.h  config.h.in~  context_histogram.c  context_histogram.h  genome_set.c  genome_set.h  histogram_comparison.c  histogram_comparison.h  hopo_counter.c  hopo_counter.h  hopo_set.c  hopo_set.h  kseq.h  main.c  o  outline.c  tatajuba.h
tests/: Makefile.am  Makefile.in  check_bwa.c  debug_bwa.c  debug_bwa_001.c  debug_bwamem.c
tests/files/: reads.fa  reads.sai  reads.sam  small.fasta  small.fasta.amb  small.fasta.ann  small.fasta.bwt  small.fasta.pac  small.fasta.sa  small.fasta.test.ann  small.fasta.test.bwt  small.fasta.test.pac
